--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,10 @@ bin/
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+hs_err_pid*i
+
+# IntelliJ
+.idea/
+out/
+*.iml
+*.swp
